# vision_visp

kalman_filter/: CMakeLists.txt  package.xml
kalman_filter/include/: kalman_filter.hpp
kalman_filter/launch/: average_filter.launch  kalman_filter.launch
kalman_filter/src/: average_filter.cpp  kalman_filter_.cpp
visp_auto_tracker/src/: tracking.cpp
visp_megapose/: README.md
visp_megapose/launch/: megapose_client.launch  megapose_client_pallet.launch  megapose_client_reck.launch  megapose_client_red_apple.launch  megapose_client_shelf.launch
visp_megapose/scripts/: megapose_variables_final.json
visp_megapose/src/: megapose_client.cpp
visp_tracker/src/visp_tracker/: tracker-mbt.cpp
